--- a/config/config.yaml
+++ b/config/config.yaml
@@ -9,7 +9,9 @@ model:
   ndf: 64             # number of discriminator filters in the first conv. layer
   n_res_blocks: 9     # number of residual blocks in generator
   n_D_layers: 3       # number of convolutional layers in discriminator
-
+  lambda_A: 10
+  lambda_B: 10
+  lambda_idt: 0.5
 
 
    parser.add_argument('--ndf', type=int, default=64, help='# of discrim filters in the first conv layer')
